# decgov_backend

./: .env  .gitignore  Cargo.toml  backend.did  dfx.json  generate-candid.sh
.dfx/local/: canister_ids.json  network-id
.dfx/local/canisters/decgov_backend/: constructor.did  constructor.old.did  decgov_backend.wasm  index.js  service.did  service.did.d.ts  service.did.js
.dfx/local/lsp/: bkyz2-fmaaa-aaaaa-qaaaq-cai.did
src/: lib.rs  main.rs  utils.rs
src/services/: eth_rpc.rs  events.rs  mod.rs  voting.rs
src/types/: btc_strategy.rs  eth_rpc.rs  event.rs  evm_event.rs  evm_strategy.rs  mod.rs  proposal.rs  proposal_option_vote.rs  proposal_options.rs  space.rs  strategy.rs  vote.rs  webhook_event.rs
tests/: space_tests.rs
