[package]
name = "decgov_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = "0.10.10"
ic-cdk = "0.15.0"
ic-cdk-macros = "0.15.0"
ic-stable-structures = "0.6.5"
serde_bytes = "0.11.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
dotenv = "0.15.0"
ic-cdk-bindgen = "0.1.3"