[package]
name = "decgov_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "decgov_backend"

[dependencies]
candid = "0.10.10"
ic-cdk = "0.15.0"
ic-cdk-macros = "0.15.0"
ic-stable-structures = "0.6.5"
ic-cdk-timers = "0.9.0"
serde_bytes = "0.11.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.2", features = ["custom"] }
anyhow = "1.0.86"
hyper = "1.4.1"
url = "2.5.2"
futures = "0.3.30"
ethers-core = "2.0.14"
hex = "0.4.3"
dotenv = "0.15.0"
ethers-contract = "2.0.14"


[build-dependencies]
dotenv = "0.15.0"
ic-cdk-bindgen = "0.1.3"